# site

./: .dockerignore  .editorconfig  .env.example  .env.sample  .gitattributes  .gitignore  .markdownlint.yml  .marksman.toml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  .prettierrc.json  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CNAME  COPYING  COPYING.md  Cargo.toml  Dockerfile  Dockerfile.builder  NOTICE  README.md  ROADMAP.md  SECURITY.md  astro.config.ts  biome.json  compose.override.yaml  compose.production.yaml  compose.yaml  dbsetup.js  docker-entrypoint.js  ec.config.mjs  fly.toml  foo.txt  netlify.toml  package.json  pnpm-lock.yaml  (+15 more)
.astro/: icon.d.ts
.cargo/: config.toml
.github/agents/: docs-agent.md
.github/workflows/: ci.yml  fly-deploy.yml  rust-ci.yml
.zed/: settings.json
app/: content.config.ts  env.d.ts  global.css
app/@types/: global.d.ts  project.d.ts  remark.d.ts
app/actions/: server.ts
app/assets/: index.ts
app/content/: authors.ts  helpers.ts  index.ts  journal.ts  pages.ts  problems.ts  projects.ts  sandbox.ts
app/helpers/: deferred.ts  dom.ts  error.ts  println.ts  robots.ts  url-to-string.ts
app/lib/: built.ts  db.ts
app/pages/: 404.mdx  500.astro  about.astro  hello.astro  humans.txt.ts  index.astro  offline.mdx  og.png.ts  opensearch.xml.ts  pubkey.asc.ts  resume.pdf.ts  robots.txt.ts  rss.mdx
app/utils/: casts.ts  guards.ts  object.ts  range.ts  strings.ts
apps/docs/: ROADMAP.md
apps/site/: .gitignore  Dockerfile  astro.config.ts  ec.config.mjs  fly.toml  markdoc.config.json  markdoc.config.ts  package.json  pwa-assets.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  worker-configuration.d.ts  wrangler.toml
apps/studio/: astro.config.ts  package.json  worker-configuration.d.ts  wrangler.toml
apps/xsite/: .gitignore  astro.config.ts  ec.config.mjs  markdoc.config.json  package.json
apps/xusite/: markdoc.config.json  markdoc.config.ts  package.json  tsconfig.json  tsconfig.scripts.json  vitest.config.ts  wrangler.jsonc
config/: adapter.ts  dotenv.ts  experimental.ts  fonts.ts  helpers.ts  iconify.json  images.ts  index.ts  integrations.ts  manifest.json  markdown.ts  prefetch.ts  security.ts  vite.ts
content/authors/: princemuel.toml
content/drafts/: pirates.mdx
content/journal/: 2025-12-12-patterns-in chaos.mdx
content/pages/: about.md  about.mdx  draft.mdx  error.mdx  hello.mdx  home.md  home.mdx  journal.mdx  missing.mdx  offline.mdx  projects.mdx
content/problems/: not-found.md  not-found.mdx  rate-limited.md  rate-limited.mdx  validation-error.md  validation-error.mdx
content/sandbox/: climes.toml  genres.toml  genres.yml  labels.toml  labels.yml  routes.toml  routes.yml  sharers.toml  shares.yml  socials.toml  socials.yml
db/: config.ts  seed.ts
pkgs/database/: database.ts  index.ts  (+1 more)
prisma/: schema.prisma  sqlite.db
scripts/: changelog  changelog.ps1  changelog.rs  compress  compress.js  deploy.sh  fly-checklist.sh  iconify.rs  iconify.ts  migrate.rs  migrate.sh  minify  minify.js  modified  modified.sh  rename.sh
src/: content.config.ts  env.d.ts  global.css
(+550 files in other folders)
