[workspace]
# Use the newer version of the cargo resolver
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members  = ["pkgs/native/*"]
resolver = "3"

    [workspace.dependencies]

    napi        = "3"
    napi-derive = "3"

    [workspace.lints.rust]
    absolute_paths_not_starting_with_crate = "warn"
    dead_code                              = "warn"
    trivial_numeric_casts                  = "warn"
    unused_import_braces                   = "warn"
    unused_lifetimes                       = "warn"
    unused_macro_rules                     = "warn"

    [workspace.lints.clippy]
    allow_attributes        = "deny"
    cargo_common_metadata   = "allow"
    empty_docs              = "allow" # there are some false positives inside biome_wasm
    multiple_crate_versions = "allow"

    # pedantic
    assigning_clones             = "warn"
    checked_conversions          = "warn"
    cloned_instead_of_copied     = "warn"
    copy_iterator                = "warn"
    dbg_macro                    = "warn"
    doc_link_with_quotes         = "warn"
    empty_enum                   = "warn"
    expl_impl_clone_on_copy      = "warn"
    explicit_into_iter_loop      = "warn"
    filter_map_next              = "warn"
    flat_map_option              = "warn"
    fn_params_excessive_bools    = "warn"
    from_iter_instead_of_collect = "warn"
    implicit_clone               = "warn"
    implicit_hasher              = "warn"
    index_refutable_slice        = "warn"
    inefficient_to_string        = "warn"
    invalid_upcast_comparisons   = "warn"
    iter_filter_is_ok            = "warn"
    iter_not_returning_iterator  = "warn"
    large_stack_arrays           = "warn"
    large_types_passed_by_value  = "warn"
    macro_use_imports            = "warn"
    manual_is_variant_and        = "warn"
    manual_ok_or                 = "warn"
    manual_string_new            = "warn"
    map_flatten                  = "warn"
    map_unwrap_or                = "warn"
    mismatching_type_param_order = "warn"
    mut_mut                      = "warn"
    naive_bytecount              = "warn"
    needless_bitwise_bool        = "warn"
    needless_continue            = "warn"
    needless_for_each            = "warn"
    no_effect_underscore_binding = "warn"
    option_as_ref_cloned         = "warn"
    ref_binding_to_reference     = "warn"
    ref_option_ref               = "warn"
    single_char_pattern          = "warn"
    stable_sort_primitive        = "warn"
    str_split_at_newline         = "warn"
    unnecessary_box_returns      = "warn"
    unnecessary_join             = "warn"
    unnested_or_patterns         = "warn"
    unreadable_literal           = "warn"
    verbose_bit_mask             = "warn"
    zero_sized_map_values        = "warn"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"

[profile.profiling]
debug    = true
inherits = "release"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
